<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BookManager</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_summary">SummaryActivity</string>
    <string name="leastExpensiveItem">Least expensive item:</string>
    <string name="mostExpensiveItem">Most expensive item:</string>
    <string name="totalCost">Total cost:</string>
    <string name="averagePrice">Average price:</string>
    <string name="title">Title:</string>
    <string name="author">Author:</string>
    <string name="course">Course:</string>
    <string name="price">Price:</string>
    <string name="SEK">SEK</string>
    <string name="ISBN">ISBN:</string>
    <string name="Phase">Mobile Computing Phase 1</string>

</resources>
